--- a/QSwitch/QSwitch.vcxproj
+++ b/QSwitch/QSwitch.vcxproj
@@ -202,6 +202,9 @@
   <ItemGroup>
     <ResourceCompile Include="QSwitch.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="QSwitch.manifest" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
