--- a/QSwitch/QSwitch.vcxproj.filters
+++ b/QSwitch/QSwitch.vcxproj.filters
@@ -116,4 +116,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="QSwitch.manifest" />
+  </ItemGroup>
 </Project>
