--- a/QSwitch/QSwitch.vcxproj.filters
+++ b/QSwitch/QSwitch.vcxproj.filters
@@ -65,9 +65,6 @@
     <ClInclude Include="RfwString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\my_resampler.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="resampler.h">
       <Filter>Libs</Filter>
     </ClInclude>
@@ -108,6 +105,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RoundedRectangleShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="my_resampler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="memdebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
