--- a/QSwitch/QSwitch.rc
+++ b/QSwitch/QSwitch.rc
@@ -36,7 +36,7 @@ IDR_TRAY_MENU MENUEX
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_ABOUT DIALOG 0, 0, 242, 225
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "About"
 FONT 8, "Ms Shell Dlg"
 {
